# CodePilotX

./: README.md  pyproject.toml
codepilotx/: __init__.py  cli.py  client.py  config.py  server.py
codepilotx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: install.cmd  install.ps1  install.sh
