[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codepilotx"
version = "0.1.0"
description = "Local AI coding copilot CLI - runs on your own hardware"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "CodePilotX" }]
keywords = ["ai", "copilot", "cli", "coding", "ollama", "local-ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13",
    "websockets>=12",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "python-dotenv>=1.0",
]

[project.scripts]
cpx = "codepilotx.cli:app"

[project.urls]
Homepage = "https://github.com/fooxygg/CodePilotX"

[tool.setuptools.packages.find]
where = ["."]
include = ["codepilotx*"]
